fix: sizes, paddings, gaps

--- a/components/IndividualImageCard/similar-tags.module.scss
+++ b/components/IndividualImageCard/similar-tags.module.scss
@@ -1,11 +1,21 @@
-.header {
-    font-size: 14px;
+.self {
+    display: flex;
+    flex-direction: column;
+    row-gap: 14px;
 }
 
-.container {
+.header {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 21px;
+}
+
+.tags {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 10px;
+    justify-content: flex-start;
     list-style: none;
     padding-left: 0;
     padding-right: 0;
@@ -13,23 +23,19 @@
 }
 
 .tag-container {
-    background-color: #f2f2f2;
-    border-radius: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    object-fit: contain;
-    padding-left: 5px;
-    padding-right: 5px;
     text-decoration: none;
 }
 
 .tag {
+    background-color: #f2f2f2;
+    border-radius: 4px;
     color: #828282;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: lighter;
-    line-height: 1.5;
-    margin-right: 5px;
+    line-height: 17px;
     object-fit: contain;
-    padding: 5px;
+    padding: 9px;
+    padding-bottom: 6px;
+    padding-top: 7px;
     text-decoration: none;
 }
